# Interesting-Numbers

./: .gitignore  LICENSE  README.md  setup.cfg
src/: find_words.py  interesting_number.py  interests.py  number_finder.py
src/interesting_numbers/: find_words.py  interests.py  number_finder.py
tests/: test_interests.py
