[metadata]
name = interesting_numbers
version = 0.1.3
author = Lief Lundmark-Aitcheson
author_email = lieflundmarkaitcheson@gmail.com
description = A package for finding interesting numbers and representations of numbers
long_description = file: README.md, LICENSE.txt
long_description_content_type = text/markdown
url = https://github.com/leafthelegend/Interesting-Numbers
project_urls =
    repository = https://github.com/leafthelegend/Interesting-Numbers
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]
include_package_data = True
package_dir =
    = src
packages = find:
python_requires = >=3.6
install_requires =
    sympy

[options.package_data]
* = *.txt, interesting_numbers/*.txt, src/interesting_numbers/*.txt

[options.packages.find]
where = src